tests/negative/neg_try_send_compound_else_use.safe
-- Test: neg_try_send_compound_else_use
-- Description: Access-typed channel elements are rejected before try_send path-sensitivity checks run.
-- Expected: REJECT source_frontend_error

package Neg_Try_Send_Compound_Else_Use is

   type Payload is record
      Value : Integer;
   end record;

   type Payload_Ptr is access Payload;

   channel Data_Ch : Payload_Ptr capacity 1;

   function Run is
      Source  : Payload_Ptr = new ((Value = 1) as Payload);
      Success : Boolean = False;
      Ready   : Boolean = False;
   begin
      try_send Data_Ch, Source, Success;
      if Success and then Ready then
         null;
      else
         send Data_Ch, Source;
      end if;
   end Run;

end Neg_Try_Send_Compound_Else_Use;
